--- a/Assignment_5/index.html
+++ b/Assignment_5/index.html
@@ -6,7 +6,10 @@
     <body>
         <p>Im not sure what to really put here besides showing what can be made with the coding</p>
         <p>besides that and showing what <b>images</b> could look like</p>
-        <img src="./.Pictures\Coding5.jpg"/>
+        <img src="https://i.imgur.com/7TG01TT.jpeg" height='300' width='150' /> 
+        <p>on to the <a href=https://github.com/CrazedHuntsman/IntroWebDesign/tree/main/Assignment_5>Github</a>.</p>
+
 
     </body>
+
 </html>
