--- a/Assignment_8/index.html
+++ b/Assignment_8/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
 <html>
+    <head>
+
+        <meta charset="UFT-8">
+        <meta name="author" name="damian bearsdlee">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Various art works</title>
+        
+        <style>
+            body {
+                background-color:goldenrod;
+                text-align: center;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            }
+            .container {
+                background-color: darkmagenta;
+                width: 600;
+                margin:auto;
+                padding: 20;
+                border: 1pt solid black;
+            }
+            .description{
+                background-color: blueviolet;
+                color: black;
+                font-size: medium;
+                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div id=""
+    </body>
     
 
 </html>
