--- a/Assignment_8/index.html
+++ b/Assignment_8/index.html
@@ -31,8 +31,30 @@
     </head>
 
     <body>
-        <div id=""
-    </body>
-    
+        <div id="various artworks" class="container">
+            <h1>Different photoshopped creations</h1>
+            <img src="media/Game Concept.jpg" height="400" width="400" alt="power of greed">
+            <h2>short animation</h2>
+            <img src="media/Shooting Star.gif" height="400" width="400" alt="stars">
+        </div>
 
+        <div id="blender animation" class="container">
+            <h1>Blender animation</h1>
+            <video width="500" height="450" preload="auto">
+                <source src="video/Cave.mp4" type="video/mp4">
+            </video>
+        </div>
+        
+        <div id="audio" class="description">
+            <h1>audio creation</h1>
+            <audio preload controls>
+                <source src="./media/The call of the ocean.wav" type="audio/wav">
+            </audio>
+            <h2>short discription</h2>
+            <p>The thought was to this was<br />
+            what would happen if you were diving,<br />
+            searching for something in the ocean<br />
+            only to be pulled in by some mysterious singing.</p>
+        </div>
+    </body>
 </html>
