--- a/Assignment_8/index.html
+++ b/Assignment_8/index.html
@@ -40,7 +40,7 @@
 
         <div id="blender animation" class="container">
             <h1>Blender animation</h1>
-            <video width="500" height="450" preload="auto">
+            <video width="500" height="450" poster="00:00.09" preload controls>
                 <source src="video/Cave.mp4" type="video/mp4">
             </video>
         </div>
