--- a/Assignment_8/index.html
+++ b/Assignment_8/index.html
@@ -40,8 +40,7 @@
 
         <div id="blender animation" class="container">
             <h1>Blender animation</h1>
-            <video width="500" height="450" poster="100" preload controls>
-                <source src="video/Cave.mp4" type="video/mp4">
+            <video width="500" height="450" src="video/Cave.mp4" poster=".09" preload controls>>
             </video>
         </div>
         
