--- a/Assignment_10/index.html
+++ b/Assignment_10/index.html
@@ -7,5 +7,28 @@
         <title>Stylings</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
         </head>
-
+    <body>
+        <div class="main-container">
+            <h1 id="mainheader">Favorite Characters</h1>
+            <div class="secondary-container">
+                <img id="slayer" src="./images/ornstein.jpg" height="350px" alt="ornstein" title="Dragonslayer Ornstein" />
+            </div>
+            <div class="secondary-container">
+                <strong>Dragonslayer Ornstien</strong> is a boss in the orignal darksouls game, he is along with another enemy called smough fight you in a 2v1. Defeating one of them first will buff the other one with their powers in the second phase. Ornstein weilds a spear and is very fast for how the game was first created (it feels slower and clunkier now compared to their newer games) but regardless one of my favorite designs and weapons to use.
+            </div>
+            <div class="secondary-container">
+                <img id="abyss" src="./images/artorias.jpg" height="350px" alt="abyssalknight" title="abyssalknight" />
+            </div>
+            <div class="secondary-container">
+                <strong>Abyssalknight Artorias</strong> is another boss within the darksouls game that has many lore connections. He is a boss you fight in the dlc where you find him consumed by darkness and driven mad, with a broken arm and a left handed sword that he wields it like the legend he is. He is another great design that is a favorite of a family members.
+            </div>
+            <div class="secondary-container">
+                <img id="jester" src="./images/nights.webp" height="350px" alt="seganights" title="seganights" />
+            </div>
+            <div class="secondary-container">
+                <strong>Nights</strong> is a SEGA character that doesn't really have much of following or games to them, they make apperences in multiple sega games but not known much. I personally like the colors and am a huge fan of the jester style characters. 
+            </div>
+            
+        </div>
+    </body>
 </html>
