--- a/Assignment_11/index.html
+++ b/Assignment_11/index.html
@@ -14,8 +14,8 @@
         <p>The carnivorous cowplant</p>
     </div>
     <div>
-        <img src="./images/cowplant.webp" width = 150px; style="float: left;">
-        <img src="./images/babycowplant.jpg" width = 60px height = 70px; style="float: right;">
+        <img src="./images/cowplant.webp" width = 200px height =  250px; style="float: left;">
+        <img src="./images/babycowplant.jpg" width = 100px height = 120px; style="float: right;">
         <p><b>The Cowplant</b> is a plant within the sims universe. A very strange plant that is found only a few ways, such as foraging for it after a certain skill level or through space travel when getting that job level.
         The cow plant grows from a seed that grows into a tiny plant with horns (see right), Personally I find the plant cute in all stages. 
         </p>
