--- a/Assignment_11/index.html
+++ b/Assignment_11/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="title">
-        <p>The carnivorous cowplant</p>
+        <p>The cowplant</p>
     </div>
     <div>
         <img src="./images/cowplant.webp" width = 200px height =  250px; style="float: left;">
